# TeleBoost

./: .gitattributes  .gitignore  .logs  =0.17.0  CITATION.cff  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  NOTICE  PIPE_TEST.md  PR_DRAFT.md  QUICKSTART.md  README.md  README_ZN.md  SECURITY.md  SETUP_WXE.md  SpectralVolumeReward.py  checklisi.txt  cog.yaml  compare_minimal_vae_latents.py  compare_model_state_dicts.py  compare_vae_encoders_demo.py  compare_vae_latents_teletron.py  dump_minimal_diffsynth_vae.py  generate.py  grpo_wan_w_sche.py  infer_multinode_wan22.py  install.sh  log  logs_2gpu  merge_checkpoint.py  model_paths.json  nccl_pytorch.py  nccl_test.sh  pyproject.toml  realtimeplotter.py  requirements-dancegrpo-py310.txt  requirements-npu.txt  requirements-pinned.txt  (+14 more)
.github/: CODEOWNERS
config_sd/: base.py  dgx.py
data_preprocess/: prepare_wan_data.py  preprocess_flux_embedding.py  preprocess_hunyuan_embeddings.py  preprocess_rl_embeddings.py  preprocess_text_embeddings.py  preprocess_vae_latents.py  preprocess_validation_text_embeddings.py  preprocess_wan_data.py  preprocess_wan_embeddings.py  preprocess_wan_embeddings_fromlist.py  preprocess_wan_rl_embeddings.sh  preprocess_wan_rl_embeddings_1p3B.sh
distill/: discriminator.py  solver.py
docker/: Dockerfile.dancegrpo  Dockerfile.rocm  Dockerfile.teleboost  Dockerfile.vllm.sglang.megatron  Dockerfile.vllm.sglang.megatron.deepseek
docs/: README.md  dataset_preprocess_plan.md  hybrid_flow.rst  index.rst  install_from_scratch.md
documents/: config_guide.md  doc_structure.md  wan_dpo_workflow.md
dpo_dumps/: dataset_raw_rank0.jsonl  dataset_raw_rank1.jsonl  dataset_raw_rank2.jsonl  dataset_raw_rank3.jsonl  dataset_raw_rank4.jsonl  dataset_raw_rank5.jsonl  dataset_raw_rank6.jsonl  dataset_raw_rank7.jsonl  prevae_compare_rank0.jsonl  prevae_compare_rank1.jsonl  prevae_compare_rank2.jsonl  prevae_compare_rank3.jsonl  prevae_compare_rank4.jsonl  prevae_compare_rank5.jsonl  prevae_compare_rank6.jsonl  prevae_compare_rank7.jsonl
examples/: README.md
logs/: events.out.tfevents.1748329337.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.8034.0  events.out.tfevents.1748330014.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.19491.0  events.out.tfevents.1748330067.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.21497.0  events.out.tfevents.1748330696.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.26979.0  events.out.tfevents.1748330748.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.28722.0  events.out.tfevents.1748330934.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.31092.0  events.out.tfevents.1748331100.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.35218.0  events.out.tfevents.1748331174.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.38169.0  events.out.tfevents.1748331218.ZJZX1H-402-F-05-A1P1-SEV-H100-08U05.40322.0  events.out.tfevents.1748515633.ZJZX1H-402-F-03-A1P1-SEV-H100-08U05.3440578.0  events.out.tfevents.1748515735.ZJZX1H-402-F-03-A1P1-SEV-H100-08U05.3448799.0  (+126 more)
models/: flash_attn_no_pad.py
test/: readme.md
(+2764 files in other folders)
