# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "teleboost"
version = "0.1.0"
description = "TeleBoost: video-generation RL training stack on top of verl + Wan2.1/2.2"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [{name = "TeleBoost contributors"}]
urls = {Homepage = "https://github.com/FortPercent/TeleBoost"}

# Runtime deps. `verl` itself is intentionally NOT listed: it must be
# installed with `--no-deps` to avoid pip upgrading torch / cuda / ray.
# See requirements-verl.txt and docs/install_from_scratch.md for details.
dependencies = [
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "hydra-core",
    "numpy",
    "pandas",
    "peft",
    "pyarrow>=19.0.0",
    "pybind11",
    "pylatexenc",
    "ray[default]",
    "tensordict<=0.6.2",
    "torchdata",
    "transformers",
    "wandb",
    "packaging>=20.0",
    "uvicorn",
    "fastapi",
]

[project.optional-dependencies]
gpu = ["liger-kernel", "flash-attn"]
test = ["pytest", "pre-commit", "py-spy"]
vllm = ["tensordict<=0.6.2", "vllm<=0.8.5"]
sglang = ["tensordict<=0.6.2", "sglang[srt,openai]==0.4.6.post5", "torch-memory-saver>=0.0.5", "torch==2.6.0"]

# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
# Note: While the formatter will attempt to format lines such that they remain within the line-length,
# it isn't a hard upper bound, and formatted lines may exceed the line-length.
line-length = 300 # TODO: Reduce this to a more reasonable value

[tool.ruff.lint]
isort = {known-first-party = ["verl"]}
# c.f. https://github.com/vllm-project/vllm/blob/ce8d6b75fc0586045df75ee1568a5b5f9957251b/pyproject.toml
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # Can remove once 3.10+ is the minimum Python version
    "UP007",
    # `.log()` statement uses f-string
    "G004",
]

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
# True means `setuptools` will attempt to include all relevant files in package_data automatically.
# This corresponds to `include_package_data=True` in setup.py.
include-package-data = true


[tool.setuptools.package-dir]
"" = "."